* Fixed a macro regression: macro output is visible when macro is collapsed * Fixed getSourceText() to work when the plain text editor is not created * Fixed CSS for in-line mode
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/trunk@20746 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/Wysiwyg.css
+++ b/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/Wysiwyg.css
@@ -1,6 +1,6 @@
 @import url('dialog.css');
-@import url('menu.css');
 @import url('tab.css');
+@import url('menu.css');
 @import url('toolbar.css');
 
 @import url('color.css');
@@ -11,9 +11,19 @@
 @import url('symbol.css');
 @import url('table.css');
 
-.xRichTextEditorTabPanel {
+table.xRichTextEditorTabPanel {
+  font-style: normal;
   width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#xwikieditcontent table.xRichTextEditorTabPanel {
   background-color: #F0F0EE;
+}
+
+table.xRichTextEditorTabPanel td {
+  border: 0 none;
   padding: 0;
 }
 
@@ -34,6 +44,20 @@
   padding: 0;
 }
 
+#xwikieditcontent .xRichTextEditor, .xRichTextEditorTabPanel .xRichTextEditor {
+  border: 0 none;
+}
+
+#xwikieditcontent .xRichTextEditor .gwt-MenuBar-horizontal, .xRichTextEditorTabPanel .xRichTextEditor .gwt-MenuBar-horizontal {
+  border-top: 0 none;
+}
+
+.xRichTextEditor {
+  border: 1px solid #DDD;
+  border-top: 0 none;
+  font-style: normal;
+}
+
 .xRichTextEditor .gwt-RichTextArea {
   width:100%;
   background:#FFFFFF none repeat scroll 0%;
@@ -42,7 +66,12 @@
   padding:0;
 }
 
+.xRichTextEditor .gwt-MenuBar-horizontal {
+  border-top: 1px solid #DDD;
+}
+
 .xPlainTextEditor {
+  border: 0 none;
   width: 100%;
   height: 100%;
 }
