--- a/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/tab.css
+++ b/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/tab.css
@@ -1,4 +1,5 @@
-.gwt-TabBar {
+table.gwt-TabBar {
+  margin: 0;
 }
 
 .gwt-TabBar .gwt-TabBarFirst {
